# GLC--

./: .clang-format  CMakeLists.txt
build-check/: CMakeCache.txt
include/GLEngine/: Engine.hpp  engine.hpp  logger.hpp
include/GLEngine/app/: App.hpp  app.hpp
include/GLEngine/debug/: imGui.hpp
include/GLEngine/event/: Event.hpp  event.hpp
include/GLEngine/input/: Input.hpp  input.hpp
include/GLEngine/rendering/: Renderer.hpp  Window.hpp  camera.hpp  mesh.hpp  renderer.hpp  shaders.hpp  window.hpp
include/GLEngine/rendering/objects/: ArrayObject.hpp  Buffer.hpp  Camera.hpp  Mesh.hpp  Shader.hpp  Texture.hpp
include/GLEngine/rendering/opengl/: buffer.hpp  vertexArray.hpp
include/GLEngine/type/: cframe.hpp  color.hpp  ivec2.hpp  mat4.hpp  quat.hpp  range.hpp  type.hpp  vec2.hpp  vec3.hpp  vec4.hpp
resources/: .frag  .vert
src/: Init.cpp  logger.cpp  test.cpp
src/app/: App.cpp  app.cpp
src/debug/: imGui.cpp
src/input/: Input.cpp  input.cpp
src/renderer/: Renderer.cpp  Window.cpp
src/renderer/objects/: ArrayObject.cpp  Buffer.cpp  Mesh.cpp  Shader.cpp  Texture.cpp
src/rendering/: mesh.cpp  renderer.cpp  shaders.cpp  window.cpp
src/rendering/opengl/: buffer.cpp  vertexArray.cpp
